[gd_scene load_steps=10 format=1]

[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/Ondilo.gd" type="Script" id=1]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/kanono_elektajxo.png" type="Texture" id=2]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/ondilo.png" type="Texture" id=3]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/gamo.png" type="Texture" id=4]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/ondo.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 124.772

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 661.054

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 165.637

[node name="Ondilo" type="Node2D"]

transform/rot = -90.0
transform/scale = Vector2( 0.3, 0.3 )
script/script = ExtResource( 1 )

[node name="Ondilo" type="KinematicBody2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ondilo"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Elektumo" type="Sprite" parent="Ondilo"]

visibility/opacity = 0.5
transform/rot = -1.77005e-13
transform/scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Ondilo"]

texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

transform/rot = 8.14222e-13
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Limo" type="Sprite" parent="Area2D"]

visibility/behind_parent = true
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Fiksata" type="Node2D" parent="."]

[node name="Nivelo" type="Label" parent="."]

rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -38.0
margin/top = 17.0
margin/right = 2.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ondo" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2048
collision/mask = 4100

[node name="Sprite" type="Sprite" parent="Ondo"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ondo"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="input_event" from="Ondilo" to="." method="_on_Kanono_input_event"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="body_enter" from="Ondo" to="." method="_on_Ondo_body_enter"]


